--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://enigma-chat-io.herokuapp.com/"
+  "proxy": "http://localhost:5000"
 }
