--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@iconify/react": "^4.0.1",
     "concurrently": "^7.6.0"
   },
   "engines": {
