updating origin and proxy, trying to fix new config variable bug

--- a/client/package.json
+++ b/client/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://enigma-chat-io.herokuapp.com/"
+  "proxy": "https://enigma-chat-io.herokuapp.com/"
 }
