--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://kevinstewartmercurio:ZUznPT7scdtY2gDR@clusterksm.ahcsbsm.mongodb.net/&retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://kevinstewartmercurio:zo4SIMwr3G25M5i3@clusterksm.ahcsbsm.mongodb.net/&retryWrites=true&w=majority
