--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://kevinstewartmercurio:V2wU3dMkTeVnXluO@clusterksm.ahcsbsm.mongodb.net/&retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://kevinstewartmercurio:Ulgcg83PNvLZm9P6@clusterksm.ahcsbsm.mongodb.net/&retryWrites=true&w=majority
